--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: minimal-mistakes-jekyll
 title: Willow's homepage
 description: Breaking down tyranny one brick at a time.
